; ModuleID = '/home/carl/AnghaBench/curl/tests/libtest/extr_stub_gssapi.c_gss_delete_sec_context.c'
source_filename = "/home/carl/AnghaBench/curl/tests/libtest/extr_stub_gssapi.c_gss_delete_sec_context.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GSS_S_FAILURE = common dso_local global i64 0, align 8
@GSS_INVALID_CTX = common dso_local global i64 0, align 8
@GSS_S_COMPLETE = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @gss_delete_sec_context(i64* %0, i32** %1, i32 %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca i64*, align 8
  %6 = alloca i32**, align 8
  %7 = alloca i32, align 4
  store i64* %0, i64** %5, align 8
  store i32** %1, i32*** %6, align 8
  store i32 %2, i32* %7, align 4
  %8 = load i32, i32* %7, align 4
  %9 = load i64*, i64** %5, align 8
  %10 = icmp ne i64* %9, null
  br i1 %10, label %13, label %11

11:                                               ; preds = %3
  %12 = load i64, i64* @GSS_S_FAILURE, align 8
  store i64 %12, i64* %4, align 8
  br label %27

13:                                               ; preds = %3
  %14 = load i32**, i32*** %6, align 8
  %15 = icmp ne i32** %14, null
  br i1 %15, label %20, label %16

16:                                               ; preds = %13
  %17 = load i64, i64* @GSS_INVALID_CTX, align 8
  %18 = load i64*, i64** %5, align 8
  store i64 %17, i64* %18, align 8
  %19 = load i64, i64* @GSS_S_FAILURE, align 8
  store i64 %19, i64* %4, align 8
  br label %27

20:                                               ; preds = %13
  %21 = load i32**, i32*** %6, align 8
  %22 = load i32*, i32** %21, align 8
  %23 = call i32 @free(i32* %22)
  %24 = load i32**, i32*** %6, align 8
  store i32* null, i32** %24, align 8
  %25 = load i64*, i64** %5, align 8
  store i64 0, i64* %25, align 8
  %26 = load i64, i64* @GSS_S_COMPLETE, align 8
  store i64 %26, i64* %4, align 8
  br label %27

27:                                               ; preds = %20, %16, %11
  %28 = load i64, i64* %4, align 8
  ret i64 %28
}

declare dso_local i32 @free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
